--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scale-90">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
     
 
     <div class="flex text-white flex-row spartan justify-between pt-10 pl-5 pr-5">
-        <h1  class=" text-5xl">calc</h1>
+        <h1  class="text-5xl">calc</h1>
 
         <div class="flex flex-row mt-auto mb-auto">
              <h1 class="text-slate-400" > <i>calculates incalculable...</i> </h1>
@@ -55,5 +55,5 @@
 
     
 </body>
-<script src="script.js"></script>
+<script src="/script.js"></script>
 </html>
